[package]
edition = "2021"
name = "template"
resolver = "2"
version = "0.1.0"

[dependencies]
bytes = "1"
chacha20 = "0.9"
futures-core = "0.3"
hmac = "0.12"
http = "0.2"
http-body = "0.4"
hyper = { version = "0.14", features = ["http1", "http2", "server", "stream"] }
pbkdf2 = "0.12"
sha2 = "0.10"
tokio = { version = "1", features = ["rt", "macros", "net", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
rand = "0.8"
